mongodb/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: ellamma-ecommerce
  labels:
    project: ecommerce-project
    component: mongodb
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      project: ecommerce-project
      component: mongodb
      tier: db
  template:
    metadata:
      labels:
        project: ecommerce-project
        component: mongodb
        tier: db
    spec:
      containers:
      - name: mongodb
        image: shankarntr/mongodb:v1
      readinessProbe:
        tcpSocket:
          port: 27017
        initialDelaySeconds: 10
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 27017
        initialDelaySeconds: 5
        periodSeconds: 5

---

appVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: ellamma-ecommerce
spec:
  selector:
    project: ecommerce-project
    component: mongodb
    tier: db
  ports:
    - protocol: TCP
      port: 27017 #service Port
      targetPort: 27017 #container Port
